fix jenkin code